@@ -1,5 +1,11 @@
 2009-02-06  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
 
+	* src/core/extlib/rope.ml: [splice] now accepts negative offsets 
+
+	* src/core/extlib/extString.ml*: [splice] now accepts negative offsets and too long lengths
+
+	* src/core/extlib/rope.ml: [max_int], [min_int] created
+
 	* src/main/threads/batteries.ml: [Packages] is now [Libs.Findlib], [Compilers] is now [Libs.Compilers]
 
 2009-02-05  David Rajchenbach-Teller  <David.Teller@univ-orleans.fr>
